attempt to fix button gap

--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,8 @@ text-align: center;
     border-radius: 6px 0px 0px 6px;
     height: 40px;
     font-size: 16px;
-    padding: 0 25px;
+    padding: 0 26px;
+    margin-right: -1px;
 }
 
 #index-quote-button {
@@ -142,7 +143,8 @@ text-align: center;
     border-radius: 0px 6px 6px 0px;
     height: 40px;
     font-size: 16px;
-    padding: 0 25px;
+    padding: 0 26px;
+    margin-left: -1px;
 }
 
 
